# myway

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: main.rs
src/cli/: args.rs  commands.rs  matches.rs  mod.rs
src/core/: errors.rs  filemanager.rs  mod.rs  project.rs
src/log/: log.rs
